# compliance

./: .gitignore  README.md  agents.md
backup-cost-guard/: README.md
blog-posts/: post-01-c5-compliance-gate.md  post-02-ai-compliance-audit.md  post-03-cdaa.md  post-04-dev-access-scripts.md  post-05-vault-audit-forwarder.md  post-06-vuln-sla-reporter.md  post-07-backup-cost-guard.md  post-08-skip-if-passed.md
cdaa/: .env.example  README.md  docker-compose.yml
cdaa/terraform/: .terraform.lock.hcl  Makefile  api_gw.tf  cloudtrail_lake.tf  cloudwatch.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  ssm.tf  terraform.tfvars.localstack  variables.tf
ci-templates/: README.md
compliance-audit/: README.md  pyproject.toml
compliance-audit/audits/c5/: families.json  mapping.csv  run_all.md
compliance-audit/audits/c5/reqs/: TEMPLATE.md  am.md  bcm.md  com.md  cos.md  cry.md  dev.md  hr.md  idm.md  inq.md  ois.md  ops.md  pi.md  ps.md  pss.md  sim.md  sp.md  sso.md
compliance-audit/audits/iso27001/: families.json  mapping.csv  run_all.md
compliance-audit/integrations/: base.py  utils.py
compliance-audit/integrations/vanta/: .env.example  bootstrap.py  collect_controls.py  generate_req.py  vanta_client.py
compliance-audit/prompts/: run_all.md  template.md
compliance-audit/samples/: am-policy.md  hr-policy.md  idm-policy.md
compliance-audit/tests/: test_bootstrap.py  test_mapping.py  test_vanta_client.py
dev-access-scripts/: README.md
review/: local_review.md
vault-audit-forwarder/: README.md
vuln-sla-reporter/: README.md
(+26 files in other folders)
